contactus,blog ,solution dynamic and fix product image,

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,3 +35,6 @@ body {
 .scrolling-section .pin-spacer{
       background:#FFE8DF;
 }
+.swal2-confirm{
+      background-color:#FF5C00 !important;
+}
