--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,6 @@ body {
   font-family: var(--font-sans);
 }
 
-/* उपयोगी क्लास जिसे आप जब चाहें तब उपयोग कर सकते हैं */
 .font-light {
   font-weight: 500 !important;
 }
@@ -37,4 +36,18 @@ body {
 }
 .swal2-confirm{
       background-color:#FF5C00 !important;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
 }
