--- a/src/app/styles/spotlight.css
+++ b/src/app/styles/spotlight.css
@@ -1,35 +1,22 @@
-.scrolling-section {
-  position: relative;
-  z-index: 1;
-}
 
-.banner-container {
-  width: 100%;
-  overflow: hidden;
-  position: relative;
-}
+
 
 .scrolling-banner {
   display: flex;
-  width: fit-content;
-  height: 100%;
-  gap: 20px
+  gap: 20px; /* spacing between cards */
+  overflow-x: hidden;
 }
 
 .banner-item {
-  width: 90vw;
-  height: 100%;
+  flex-shrink: 0;
+  width: 90vw;  /* fixed card width */
   position: relative;
 }
 
 .banner-item img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
 }
-
-/* Make sure the section containing the banner has enough height */
-.spotlight-section {
-  min-height: 100vh;
-  position: relative;
+.scroll-container::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for WebKit browsers */
 }
